[package]
name = "boxing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sptr = "0.3"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.11", features = ["criterion", "flamegraph"] }

[profile.bench]
debug = true

[[bench]]
name = "raw"
harness = false
