[package]
name = "boxing"
version = "0.1.0"
edition = "2021"
description = "Easy-to-use, cross-platform implementations for NaN and ptr boxes"
license = "MIT OR Apache-2.0"
keywords = ["nan-box", "collection"]
categories = ["data-structures", "compression"]
readme = "README.md"
repository = "https://github.com/CraftSpider/boxing"

[dependencies]
sptr = "0.3"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.11", features = ["criterion", "flamegraph"] }

[profile.bench]
debug = true

[[bench]]
name = "raw"
harness = false

[package.metadata.docs.rs]
rustdoc-args = ["--extend-css", "doc/extra.css"]
